flux/clusters/bc-workload/applications/siem-consumer/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: siem-consumer-netpol
  namespace: applications
spec:
  podSelector:
    matchLabels:
      app: siem-consumer
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: messaging
      ports:
        - port: 4222
    # → SIEM externo (UDP syslog)
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
      ports:
        - port: 514
          protocol: UDP
        - port: 514
          protocol: TCP
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
